--- a/main.css
+++ b/main.css
@@ -58,17 +58,25 @@ Form Styling
 	flex-direction: column;
 }
 
-#slider, .select {
+#slider, .select, .filter-button{
 	width: 95%;
 	align-self: center;
 }
 
-.form label {
+.form > label, .filter-button {
 	margin-bottom: 10px;
+	margin-top: 10px;
 }
 
+.filter-button {
+	font-size: 1em;
+}
 
-
+.checkbox-row div {
+	float: left;
+	display: block;
+	width: 50%;
+}
 
 
 
