--- a/main.css
+++ b/main.css
@@ -3,9 +3,14 @@
   flex-flow: row;
 }
 
+body {
+	font-size: 1.25em;
+}
+
 /* Set widths for panels */
 .input-panel {
 	flex-basis: 25%;
+	max-height: 375px; /*wont stretch too far down*/
 }
 
 .main-panel {
@@ -33,8 +38,8 @@
 }
 
 .navbar-styling {
-	padding-bottom: 15px;
-	padding-top: 15px;
+	padding-bottom: 10px;
+	padding-top: 10px;
 	font-size: 1.4em;
 	border: solid 2px black;
 	background-color: #FFB4B0;
@@ -53,6 +58,10 @@
 /***********
 Form Styling
 ************/
+.input-panel {
+	padding: 15px;
+}
+
 .form {
 	display: flex;
 	flex-direction: column;
@@ -61,6 +70,7 @@ Form Styling
 #slider, .select, .filter-button{
 	width: 95%;
 	align-self: center;
+	font-size: .8em;
 }
 
 .form > label, .filter-button {
@@ -80,7 +90,26 @@ Form Styling
 
 
 
+/*****************
+Main panel styling
+*****************/
 
+.main-panel-styling {
+	padding: 15px;
+}
+
+.main-panel-styling h2 {
+	color: #785616;
+}
+
+.main-panel-styling span {
+	margin-right: 15px;
+}
+
+/* Applies left margin to all but first span */
+.main-panel-styling span:nth-child(n+2) {
+	margin-left: 15px;
+}
 
 
 
