delete buttons appear on hover

--- a/main.css
+++ b/main.css
@@ -139,6 +139,10 @@ Main panel styling
 	float: right;
 }
 
+.main-panel .hidden {
+	display: none;
+}
+
 /*****************
 Add Music Styling
 *****************/
